test/fail/cons07.v3
//@execute 0=55; 22=77
class A(var y: int) {
	new() { y += 22; } // TODO: y resolves to synthetic local, has no side effect
}
class B extends A {
	var init: bool;
	new(y: int) super(y + 33) { this.init = true; }
}

def main(x: int) -> int {
	def a = B.new(x);
	return if(a.init, a.y);
}
